ハンバーガーメニューのリンクとjsを修正

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <nav id="gnav" class="c-gnav">
         <div class="c-hamburger-btn"><span></span><span></span><span></span></div>
         <ul class="c-gnav_list">
-          <li><a href="#mainVisual" class="Philosopher pc-display-none">top</a></li>
+          <li><a href="#" class="Philosopher pc-display-none">top</a></li>
           <li><a href="#profile" class="Philosopher">Profile</a></li>
           <li><a href="#works" class="Philosopher">Works</a></li>
           <li><a href="#skills" class="Philosopher">Skills</a></li>
